--- a/finalproject.qmd
+++ b/finalproject.qmd
@@ -55,7 +55,7 @@ This dataset was scraped from IMDb (Internet Movie Database). There are 6820 mov
 
 We will explore the factors that make a movie successful through examining the effects of `gross`, `budget`, `genre`, `rating`,`score` `votes`, `year`, and `runtime` for individual movie. 
 
-Since the dataset includes movies that are not missing or not published yet (therefore their gross values are missing), we filtered the dataset to include only observations with gross values not being NULL, as it does not make sense to include the movies that are not actually performed or lost real data in our analysis. We filter all the null values for the rest of predictor variables as well. Now we have 5423 observations in the dataset.
+Since the dataset includes movies that are not missing or not published yet (therefore their gross values are missing), we filtered the dataset to include only observations with gross values not being NULL, as it does not make sense to include the movies that are not actually performed or lost real data in our analysis. We filter all the null values for the rest of predictor variables as well, since we decided that since we were working with such a large number of movies, that it was reasonable to get rid of movies that were missing some variable, for convenience of model-fitting. Now we have 5423 observations in the dataset.
 
 ```{r filter-data}
 data <- data %>%
@@ -176,7 +176,7 @@ numeric_data <- data |>
 corrplot(cor(numeric_data))
 
 ```
-
+As can be seen, we have some correlated variables between our predictor variables, but none are particularly strong (0.8+) so we don't have to remove any of these predictor variables on the basis of correlation for our later models. 
 
 ## Methodology
 
